--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "camelcase-keys": "^8.0.2",
     "eslint-config-prettier": "^8.5.0",
     "lodash": "^4.17.21",
     "prettier": "2.8.1",
